@@ -1,5 +1,5 @@
 Package: clustMixType
-Version: 0.2-5
+Version: 0.2-6
 Date: 2020-04-22
 Title: k-Prototypes Clustering for Mixed Variable-Type Data
 Author: Gero Szepannek [aut, cre], Rabea Aschenbruck [aut]
